{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1626,
  "lineage": "7f03405e-32b1-0094-23c1-97e8c0870adb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-alb/5dd6b4e1b3657614",
            "arn_suffix": "app/masadrn-devops-project-alb/5dd6b4e1b3657614",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "masadrn-devops-project-alb-956972518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-alb/5dd6b4e1b3657614",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "masadrn-devops-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07a83b7c3e7ce254e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ccc31747f5ee751"
              },
              {
                "subnet_id": "subnet-0ade30703807dc4a3"
              }
            ],
            "subnets": [
              "subnet-08ccc31747f5ee751",
              "subnet-0ade30703807dc4a3"
            ],
            "tags": {
              "Name": "masadrn-devops-project-alb"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-alb",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-alb/5dd6b4e1b3657614/92fbfc6aac4df6e8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-alb/5dd6b4e1b3657614/92fbfc6aac4df6e8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-alb/5dd6b4e1b3657614",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-alb/5dd6b4e1b3657614/c23092d3748c9c64",
            "certificate_arn": "arn:aws:acm:us-east-1:676278186890:certificate/cd4d0d6c-512e-447d-bb06-cca5329b498b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-tg/4a71bfa20f5445a9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-alb/5dd6b4e1b3657614/c23092d3748c9c64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-alb/5dd6b4e1b3657614",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg",
            "module.target_group.aws_lb_target_group.app_tg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb",
      "name": "bi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9",
            "arn_suffix": "app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "masadrn-devops-project-bi-alb-550220037.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "masadrn-devops-project-bi-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07a83b7c3e7ce254e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ccc31747f5ee751"
              },
              {
                "subnet_id": "subnet-0ade30703807dc4a3"
              }
            ],
            "subnets": [
              "subnet-08ccc31747f5ee751",
              "subnet-0ade30703807dc4a3"
            ],
            "tags": {
              "Name": "masadrn-devops-project-bi-alb"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-bi-alb",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9/e72887bd356b8d5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9/e72887bd356b8d5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_bi.aws_lb.bi_alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9/e942692e11040e87",
            "certificate_arn": "arn:aws:acm:us-east-1:676278186890:certificate/cd4d0d6c-512e-447d-bb06-cca5329b498b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:listener/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9/e942692e11040e87",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:loadbalancer/app/masadrn-devops-project-bi-alb/6fea9ca1a1bf4dd9",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_bi.aws_lb.bi_alb",
            "module.alb_bi.aws_lb_target_group.bi_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49",
            "arn_suffix": "targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "masadrn-devops-project-bi-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "masadrn-devops-project-bi-tg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-bi-tg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_bi",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bi_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49-20250612150812043900000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-bi-tg/23f61aa851961d49",
            "target_id": "i-0bcad41b81797ef9a"
          },
          "dependencies": [
            "module.alb_bi.aws_lb_target_group.bi_tg",
            "module.bi.aws_instance.metabase_instance",
            "module.bi.data.aws_ami.amazon_linux",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.bi",
      "mode": "managed",
      "type": "aws_instance",
      "name": "metabase_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f0fc85de381bd44",
            "arn": "arn:aws:ec2:us-east-1:676278186890:instance/i-0bcad41b81797ef9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcad41b81797ef9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps-TerraformKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066e9b49e51c919c3",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-13-219-229-33.compute-1.amazonaws.com",
            "public_ip": "13.219.229.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Asad ur Rehman Nadeem",
                  "Project": "DevOps_Final"
                },
                "tags_all": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Asad ur Rehman Nadeem",
                  "Project": "DevOps_Final"
                },
                "throughput": 0,
                "volume_id": "vol-00496525810d5b2e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ccc31747f5ee751",
            "tags": {
              "Name": "masadrn-devops-project-bi-instance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-bi-instance",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0667c4021a2615490"
            ]
          },
          "dependencies": [
            "module.bi.data.aws_ami.amazon_linux",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b86aaed8ef90e45f",
            "arn": "arn:aws:ec2:us-east-1:676278186890:instance/i-04e11fa1413b1ed9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e11fa1413b1ed9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps-TerraformKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04139dc616c4a42a5",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-13-218-105-32.compute-1.amazonaws.com",
            "public_ip": "13.218.105.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Asad ur Rehman Nadeem",
                  "Project": "DevOps_Final"
                },
                "tags_all": {
                  "Environment": "Dev",
                  "Owner": "Muhammad Asad ur Rehman Nadeem",
                  "Project": "DevOps_Final"
                },
                "throughput": 0,
                "volume_id": "vol-01e589e9c4af09079",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08ccc31747f5ee751",
            "tags": {
              "Name": "masadrn-devops-project-nat-instance"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-nat-instance",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8308f1efcfaf0e2"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.nat_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:internet-gateway/igw-0243b3c65f58dccf2",
            "id": "igw-0243b3c65f58dccf2",
            "owner_id": "676278186890",
            "tags": {
              "Name": "masadrn-devops-project-igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-igw",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e17df2e886f68f91080289494",
            "instance_id": "i-04e11fa1413b1ed9c",
            "instance_owner_id": "676278186890",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-04139dc616c4a42a5",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e17df2e886f68f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_instance.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_security_group.nat_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:route-table/rtb-03e17df2e886f68f9",
            "id": "rtb-03e17df2e886f68f9",
            "owner_id": "676278186890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "masadrn-devops-project-private-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-private-rt",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:route-table/rtb-03664c58aaddfc3df",
            "id": "rtb-03664c58aaddfc3df",
            "owner_id": "676278186890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0243b3c65f58dccf2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "masadrn-devops-project-public-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-public-rt",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072806694bb08bd84",
            "route_table_id": "rtb-03e17df2e886f68f9",
            "subnet_id": "subnet-0953d0de25af3a946"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0326c0bffa4d05597",
            "route_table_id": "rtb-03e17df2e886f68f9",
            "subnet_id": "subnet-0d90545ae32228e9d"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6d81e4f8ea08491",
            "route_table_id": "rtb-03664c58aaddfc3df",
            "subnet_id": "subnet-08ccc31747f5ee751"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0690d5611c8550b11",
            "route_table_id": "rtb-03664c58aaddfc3df",
            "subnet_id": "subnet-0ade30703807dc4a3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:security-group/sg-0d8308f1efcfaf0e2",
            "description": "Allow all traffic for NAT instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8308f1efcfaf0e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "masadrn-devops-project-nat-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masadrn-devops-project-nat-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-nat-sg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:subnet/subnet-0953d0de25af3a946",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0953d0de25af3a946",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "masadrn-devops-project-private-1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-private-1",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:subnet/subnet-0d90545ae32228e9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d90545ae32228e9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "masadrn-devops-project-private-2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-private-2",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:subnet/subnet-08ccc31747f5ee751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ccc31747f5ee751",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "masadrn-devops-project-public-1"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-public-1",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:subnet/subnet-0ade30703807dc4a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade30703807dc4a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676278186890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "masadrn-devops-project-public-2"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-public-2",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:vpc/vpc-065b3e9641a73b158",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a73996739b4b79b",
            "default_route_table_id": "rtb-0878ceec82f371429",
            "default_security_group_id": "sg-086a38fae78e3a009",
            "dhcp_options_id": "dopt-0353ff2666ef74fac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065b3e9641a73b158",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0878ceec82f371429",
            "owner_id": "676278186890",
            "tags": {
              "Name": "masadrn-devops-project-vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-vpc",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:security-group/sg-07a83b7c3e7ce254e",
            "description": "Allow inbound from internet on ports 80 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a83b7c3e7ce254e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "masadrn-devops-project-alb-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masadrn-devops-project-alb-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-alb-sg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:security-group/sg-0667c4021a2615490",
            "description": "Allow access for Metabase",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0667c4021a2615490",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "masadrn-devops-project-bi-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masadrn-devops-project-bi-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-bi-sg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:security-group/sg-00cdef8513027f1f3",
            "description": "Allow SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cdef8513027f1f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "masadrn-devops-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masadrn-devops-project-ec2-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-ec2-sg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676278186890:security-group/sg-03b01b839fb937549",
            "description": "Allow MySQL and PostgreSQL from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b01b839fb937549",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0667c4021a2615490"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0667c4021a2615490"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "masadrn-devops-project-rds-sg",
            "name_prefix": "",
            "owner_id": "676278186890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "masadrn-devops-project-rds-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "masadrn-devops-project-rds-sg",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "timeouts": null,
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.bi_sg"
          ]
        }
      ]
    },
    {
      "module": "module.target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-tg/4a71bfa20f5445a9",
            "arn_suffix": "targetgroup/masadrn-devops-project-tg/4a71bfa20f5445a9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:676278186890:targetgroup/masadrn-devops-project-tg/4a71bfa20f5445a9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "masadrn-devops-project-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Muhammad Asad ur Rehman Nadeem",
              "Project": "DevOps_Final"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065b3e9641a73b158"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}